[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trrex"
version = "0.0.6"
description = "Transform set of words to efficient regular expression"
authors = [
    {name = "Daniel Mesejo", email = "mesejoleon@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pip>=24.3.1",
    "pytest-cov>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/mesejo/trex"

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "coverage>=7.6.10",
    "flashtext>=2.7",
    "hypothesis>=6.123.1",
    "pandas>=2.2.3",
    "perfplot>=0.10.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]
