[metadata]
name = trrex
version = 0.0.2
description = Transform trie to regular expression
author = Daniel Mesejo-Leon
author_email = mesejoleon@gmail.com
url = https://github.com/mesejo/trex
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
python_requires = >=3.6

[options]
packages = find:

[options.packages.find]
exclude =
    tests
    benchmarks